# test

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE_SELECTION_REQUIRED.md  README.md  WORKFLOW_STATUS.md  pyproject.toml
commands/: README.md  full_audit.sh  run_inversion_optimization.sh  source_cv.sh  source_final_refit.sh  source_storage.sh  verify_release.sh
configs/: l01028_release_v1.yaml
data/: bulletin_verified.csv
docs/: code_layout.md  history.md  legacy_module_map.md  reproducibility_entrypoints.md
outputs/: CURRENT_RELEASE
recovered_workflows/: README.md  audit.py  bounded_ske_v2.py  bulletin_processing.py  config.yaml  generate_insar_overview.py  geological_prior.py  geology_preprocessing.py  groundwater_processing.py  insar_processing.py  io_utils.py  lag_analysis.py  latent_head_model.py  m1_inversion.py  profiled_stage_a.py  result_audit.py  revision_products.py  run_pipeline.py  spatial_refit_validation.py  spatial_utils.py  storage.py  storage_inversion.py  temporal_analysis.py  uncertainty.py  validation.py  visualize_results.py
release/: L01028_final_cleanup_acceptance.json  L01028_release_code_acceptance.json  L01028_reproducible_flow_restoration_acceptance.json  final_cleanup_failure.json  final_delete_manifest.csv  final_delete_preflight.json  final_keep_manifest.csv  post_staging_validation_results.json
src/: README.md
tests/: test_audit.py  test_bounded_model.py  test_cli.py  test_cross_validation.py  test_gradient.py  test_harmonics.py  test_plotting.py  test_products.py  test_qa.py  test_rbf.py  test_storage.py
(+96 files in other folders)
